--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -5,6 +5,7 @@ build:
     build:
       - mvn clean package
 run:
+  runtime-version: uuid1
   command: java -jar target/HelloWorldJavaApp-1.0-SNAPSHOT.jar -Xms256m .
   network:
     port: 8080
